fix(TransactionsLoader): align tx loader and remove load more

--- a/assets/css/modules/_transaction-list.scss
+++ b/assets/css/modules/_transaction-list.scss
@@ -2,7 +2,8 @@
   .transaction-feed {
     position: relative;
     top: 50px;
-    .loading {
+    .loading .col-xs-2 {
+      text-align: center;
       margin-bottom: 10px;
     }
   }
